# engine5

./: .gitignore  .gitmodules  Cargo.toml  README.md  code  publish.sh  shell.nix
assets/scripts/: multiplayer_client.e5s  multiplayer_server.e5s
assets/shaders/: terrain.wgsl
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
src/: console_scripts.rs  controls.rs  file_paths.rs  logging.rs  main.rs  physics.rs  player.rs  terrain.rs
src/config/: controls.rs  file_paths.rs  graphics.rs  mod.rs  player_info.rs
src/map/: mod.rs  storage.rs
src/map/storage/: mod.rs  persistant_entities.rs  structures.rs
src/map/terrain/: chunks.rs  mod.rs
src/multiplayer/: client.rs  host.rs  mod.rs
src/physics/: cylinder_to_cylinder.rs  cylinder_to_terrain.rs  mod.rs  ray_cast_with_terrain.rs  terrain_to_terrain.rs
src/terrain/: mod.rs  terrain_file.rs  terrain_generation.rs  terrain_space.rs
src/ui/: fatal_error_display.rs  main_menu.rs  mod.rs  pause_menu.rs  settings_menu.rs  widgets.rs
src/ui/root_menus/: fatal_error_display.rs  main_menu.rs  mod.rs  pause_menu.rs
src/ui/settings_menu/: controls.rs  graphics.rs  mod.rs
src/ui/sub_menus/: mod.rs
src/ui/sub_menus/settings/: apology_letter.txt  controls.rs  graphics.rs  mod.rs
src/ui/widgets/: buttons.rs  combo.rs  mod.rs  numaric_input.rs
src/world/: commands.rs  dynamic_terrain.rs  generation.rs  global_terrain.rs  mod.rs  player.rs
src/world/physics/: cylinder_to_cylinder.rs  cylinder_to_terrain.rs  mod.rs  ray_cast_with_terrain.rs  terrain_to_terrain.rs
src/world/spatial_entities/: mod.rs  storage.rs
src/world/spatial_entities/types/: dynamic_terrain.rs  global_terrain.rs  mod.rs  player.rs
src/world/spatial_entities/types/player/: mod.rs  spawner.rs
src/world/terrain/: meshing.rs  mod.rs  storage.rs  terrain_space.rs
test_scripts/: lone_host.sh  multiplayer.sh
