[package]
name = "engine5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
bevy = { path = "crates/bevy" } 

[dependencies]
bevy = { version = "0.11.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
bevy_prototype_debug_lines = { version = "0.11.1", features = ["3d"] }
ordered-float = { version = "3.4", features = ["serde"] }
sled = "0.34.7"
anyhow = "1.0.71"
ciborium = "0.2.1"
serde_yaml = "0.9.25"
bevy-ui-navigation = "0.28.0"
copypasta = "0.8.2"
nom = "7.1"
nobcd = "0.2.0"
open = "5.0.0"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

