[package]
name = "engine5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
bevy = { path = "crates/bevy" } 

[dependencies]
bevy = { version = "0.11", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
bevy_prototype_debug_lines = { version = "0.11.1", features = ["3d"] }
ordered-float = { version = "3.4", features = ["serde"] }
sled = "0.34.7"
anyhow = "1.0"
ciborium = "0.2.1"
serde_yaml = "0.9.25"
bevy-ui-navigation = "0.31.0"
copypasta = "0.8.2"
nom = "7.1"
nobcd = "0.2.0"
open = "5.0.0"
bevy_console = "0.8.0"
clap = { version = "4", features = ["derive"] }
renet = "0.0.13"
renet_visualizer = "0.0.6"
dns-lookup = "2.0.2"
tracing-subscriber = "0.3.17"
tracing-log = "0.1.3"
whoami = "1.4.1"
mac_address = "1.1.5"
vec_rand = "0.1.2"
proc_macros = { path = "crates/proc_macros" }
bincode = "1.3.3"
bytes = { version = "1.5.0", features = ["serde"] }

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

