[package]
name = "engine5"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["serialize"] }
anyhow = "1.0"
imstr = { version = "0.2.0", features = ["serde"] }
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "1.9.0"
# ordered-float = { version = "3.4", features = ["serde"] }
# serde_yaml = "0.9.25"
# copypasta = "0.8.2"
# nom = "7.1"
# nobcd = "0.2.0"
# open = "5.0.0"
# bevy_console = "0.12"
# clap = { version = "4", features = ["derive"] }
# renet = "0.0.13"
# renet_visualizer = "0.0.6"
# dns-lookup = "2.0.2"
# tracing-subscriber = "0.3.17"
# tracing-log = "0.1.3"
# whoami = "1.4.1"
# mac_address = "1.1.5"
# vec_rand = "0.1.2"
# bytes = { version = "1.5.0", features = ["serde"] }
# shlex = "1.2.0"
# avian3d = { version = "0.1.0", features = ["serialize"] }

[dev-dependencies]
outdir-tempdir = "0.2"

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

